--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* body {
-  direction: rtl;
-} */
+html {
+  scroll-behavior: smooth;
+}
 @font-face {
   font-family: "Work";
   src: url("../assets/fonts/work-sans/WorkSans-Regular.ttf");
